# smtpserver

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  smtp
lib/: letter.h  parse.h  server.h  stringUtils.h  utils.h  vector.h
src/: letter.c  main.c  parse.c  server.c  stringUtils.c  utils.c
